--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,3 +4,4 @@
 @import "scss/theme-default.scss";
 @import "demo";
 @import 'perfect-scrollbar/css/perfect-scrollbar.css';
+@import "libs/select2/select2";
