--- a/resources/scss/guest.scss
+++ b/resources/scss/guest.scss
@@ -2,11 +2,10 @@
 @import 'node-waves/dist/waves.css';
 @import "demo";
 @import 'perfect-scrollbar/css/perfect-scrollbar.css';
-@import "scss/core";
 @import "./libs/typeahead-js/typeahead.scss";
 @import "./libs/@form-validation/form-validation.scss";
 @import "./page-auth.scss";
 @import "scss/core";
-@import "scss/theme-bordered.scss";
+@import "scss/rtl/theme-bordered.scss";
 
 
